--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
 			<div style="display: flex; width: 100%; justify-content: space-between; margin-top: 30px">
 				<div style="width: 50%; display: flex; flex-flow: column; align-items: center;">
 					<h4 style="text-align: center;">Before Image</h4>
-					<img id='before-image' src='' alt='before' hidden/>
+					<img id='before-image' width='256' height='256' src='' alt='before' hidden/>
 				</div>
 				<div style="width: 50%; display: flex; flex-flow: column; align-items: center;">
 					<h4 style="text-align: center;">Result Image</h4>
